--- a/app/src/main/res/layout/customcardviewcoupon.xml
+++ b/app/src/main/res/layout/customcardviewcoupon.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/linear22">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv10"
