--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,6 +40,7 @@
                 android:layout_marginBottom="30dp"
                 android:text="@string/paragraph"
                 android:textAllCaps="true"
+                android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/green"
                 android:textSize="6pt" />
 
@@ -99,30 +100,6 @@
                     android:textColor="@color/white"
                     android:id="@+id/forgetpass"
                     android:textStyle="bold" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="40dp"
-                android:layout_marginTop="50dp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/StillNoAccount"
-                    android:textColor="@color/white" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:id="@+id/createOne"
-                    android:text="@string/CreateAccount"
-                    android:textColor="@color/green" />
             </LinearLayout>
 
 
